--- a/pbc-blog.html
+++ b/pbc-blog.html
@@ -659,7 +659,21 @@
             .method p,
             .section p {
                 font-size: 1em;
-            }
+            }  
+
+            .uid-display {
+    display: inline-flex;
+    align-items: center;
+    gap: 5px;
+    font-size: 0.9em;
+    color: #64748b;
+}
+
+.uid-display i {
+    color: #6366f1;
+    font-size: 1.1em;
+}
+            
         }
     </style>
 </head>
@@ -683,6 +697,7 @@
                     <div class="author-meta">
                         <span><i class="fas fa-university"></i> Chandigarh University</span>
                         <span><i class="fas fa-graduation-cap"></i> MBA, Section 116</span>
+                        <span><i class="fas fa-uid-cap"></i> 25mba11367</span>
                     </div>
                 </div>
             </div>
