--- a/pbc-blog.html
+++ b/pbc-blog.html
@@ -696,8 +696,8 @@
                     <h3>Harsh Dadwal</h3>
                     <div class="author-meta">
                         <span><i class="fas fa-university"></i> Chandigarh University</span>
-                        <span><i class="fas fa-graduation-cap"></i> MBA, Section 116</span>
-                        <span><i class="fas fa-uid-cap"></i> 25mba11367</span>
+                        <span><i class="fas fa-graduation-cap"></i> MBA, Section 116, </span>
+                        <span><i class="fas fa-uid-cap"></i> UID - 25MBA11367</span>
                     </div>
                 </div>
             </div>
