--- a/assets/footer.html
+++ b/assets/footer.html
@@ -43,7 +43,8 @@
     </div>
     
     <div class="border-t border-gray-800 pt-6 text-center text-gray-400 text-sm">
+      <p>&copy; Made by Harsh Dadwal</p>
       <p>&copy; 2025 HP Exam Hub. All content is provided for educational purposes only.</p>
-    </div>
+    </div
   </div>
 </footer>
