--- a/harshita.html
+++ b/harshita.html
@@ -182,6 +182,7 @@
             </p>
 
             <div class="image-placeholder">
+                 <img src="https://static2.tripoto.com/media/filter/nl/img/223647/TripDocument/1503678762_img_20170813_111503.jpg"/>
                 🏔️ Mountain Roads of Himachal
             </div>
 
