--- a/harshita.html
+++ b/harshita.html
@@ -102,6 +102,26 @@
             border-left: 5px solid #fdcb6e;
         }
 
+        .blog-image {
+            width: 100%;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+            display: block;
+        }
+
+        .image-container {
+            margin: 30px 0;
+        }
+
+        .image-caption {
+            text-align: center;
+            font-style: italic;
+            color: #666;
+            margin-top: 10px;
+            font-size: 0.95em;
+        }
+
         .image-placeholder {
             width: 100%;
             height: 350px;
@@ -181,9 +201,9 @@
                 After crossing Rampur and then Sangla, we were getting closer and closer to our destination. The air was becoming more crisp, the mountains more majestic. My heart was beating fast with anticipation!
             </p>
 
-            <div class="image-placeholder">
-                 <img src="https://static2.tripoto.com/media/filter/nl/img/223647/TripDocument/1503678762_img_20170813_111503.jpg"/>
-                🏔️ Mountain Roads of Himachal
+            <div class="image-container">
+                <img src="https://static2.tripoto.com/media/filter/nl/img/223647/TripDocument/1503678762_img_20170813_111503.jpg" alt="Mountain Roads of Himachal" class="blog-image">
+                <p class="image-caption">The breathtaking mountain roads of Himachal Pradesh</p>
             </div>
 
             <h2>First Glimpse of Chitkul</h2>
@@ -204,8 +224,9 @@
                 I met one elderly aunty ji who was spinning wool outside her house. She told me stories about how the whole village migrates to lower areas during heavy snowfall. Can you imagine? The entire village, empty for months! Such resilience these people have.
             </p>
 
-            <div class="image-placeholder">
-                🏡 Traditional Chitkul Houses
+            <div class="image-container">
+                <img src="https://static2.tripoto.com/media/filter/nl/img/20975/TripDocument/1436982897_img_0504.jpg" alt="Traditional Chitkul Houses" class="blog-image">
+                <p class="image-caption">Traditional wooden houses with slate roofs in Chitkul</p>
             </div>
 
             <h2>The Famous Maa Mathi Temple</h2>
