Replace image placeholder with actual image

--- a/harshita.html
+++ b/harshita.html
@@ -223,7 +223,7 @@
             <p>
                 I met one elderly aunty ji who was spinning wool outside her house. She told me stories about how the whole village migrates to lower areas during heavy snowfall. Can you imagine? The entire village, empty for months! Such resilience these people have.
             </p>
-
+            
             <div class="image-container">
                 <img src="https://static2.tripoto.com/media/filter/nl/img/20975/TripDocument/1436982897_img_0504.jpg" alt="Traditional Chitkul Houses" class="blog-image">
                 <p class="image-caption">Traditional wooden houses with slate roofs in Chitkul</p>
@@ -260,8 +260,9 @@
                 Oh my God, the night sky in Chitkul! I've never seen so many stars in my entire life. Zero pollution, crystal clear sky - it felt like the entire Milky Way was put on display just for us. We sat outside our homestay wrapped in blankets, sipping hot kahwa, and just gazing at the stars. Truly magical!
             </p>
 
-            <div class="image-placeholder">
-                ✨ Starry Night Sky
+            <div class="image-container">
+                <img src="https://scontent.fixc1-3.fna.fbcdn.net/v/t39.30808-6/497581603_24241305828808933_1503587895254537985_n.jpg?stp=dst-jpg_p180x540_tt6&_nc_cat=110&ccb=1-7&_nc_sid=aa7b47&_nc_ohc=hFQqEcvPXDIQ7kNvwEmEB6b&_nc_oc=AdkbHAkERQcvjYKQ3tvCMBcI0vuZORD7cBNGgevgSGx1S-4drcAWxztANXRpNoKKzqHd_Cle2YcTESTa71fiXbtZ&_nc_zt=23&_nc_ht=scontent.fixc1-3.fna&_nc_gid=OCacFWxGk9MzkLpv0SK4gA&oh=00_AfqWnD-YXMZ1nZo9tw8UzDV1mqKl9C9TBGhzmXr3igoCjg&oe=6974519D">
+                <p class="image-caption">Traditional wooden houses with slate roofs in Chitkul</p>
             </div>
 
             <h2>My Final Thoughts</h2>
