--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
     <div id="header-placeholder"></div>
 
     <!-- Hero Section -->
-    <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-16 text-center">
-      <div class="max-w-4xl mx-auto px-4">
+    <section class="bg-gradient-to-r from-blue-600 to-blue-800 text-white py-16 text-center relative overflow-hidden">
+      <!-- Background Image -->
+      <div class="absolute inset-0 z-0">
+        <img src="/assets/hpexam.png" alt="HP Exam Background" class="w-full h-full object-cover opacity-20">
+      </div>
+      
+      <!-- Content with overlay -->
+      <div class="max-w-4xl mx-auto px-4 relative z-10">
         <h1 class="text-4xl sm:text-5xl font-bold mb-4">Empowering Himachal's Aspirants</h1>
         <p class="text-xl sm:text-2xl mb-6">Free resources for HP competitive exams - because education should be accessible to all</p>
         <div class="flex flex-wrap justify-center gap-4">
